# ucf_robotics

./: .gitignore  README.md
random/: LaneDetection.cpp  lil_mac.mbs  lil_mac_roboteq_script.hex  strobe_control.ino
random/opencv_utils/: .gitignore  CMakeLists.txt  dumb_config_gen.cpp  get_homography_matrix.cpp  green.cpp  known_homography.cpp  linefinder.h  pyramid.cpp  vision_tuning_utility.cpp
random/opencv_utils/bash/: front_homography.bash  front_threshold.bash  left_homography.bash  left_threshold.bash  right_homography.bash  right_threshold.bash
ucf_boat/: Readme.md
ucf_core/: README.txt  Readme.md
ucf_core/src/core/core_bringup/: CMakeLists.txt  README.md  package.xml
ucf_core/src/core/core_description/: CMakeLists.txt  package.xml
ucf_core/src/core/core_sensors/: CMakeLists.txt  README.txt  package.xml
ucf_core/src/core_apps/core_vision/: CMakeLists.txt  package.xml
ucf_core/src/core_apps/waypoint_manager/: CMakeLists.txt  package.xml
ucf_core/src/core_apps/waypoint_manager_msgs/: CMakeLists.txt  package.xml
ucf_core/src/core_drivers/core_cameras/: CMakeLists.txt  package.xml
ucf_core/src/core_drivers/core_gps/: CMakeLists.txt  package.xml
ucf_core/src/core_drivers/core_hokuyo/: CMakeLists.txt  package.xml
ucf_igvc/: Readme.md
ucf_igvc/src/igvc_apps/igvc_navigation/: CMakeLists.txt  package.xml
ucf_igvc/src/igvc_apps/igvc_navigation/launch/: .gitignore  gmapping.launch  gmapping_demo.launch  move_base.launch
ucf_igvc/src/igvc_apps/igvc_navigation/launch/includes/: move_base.launch.xml  velocity_smoother.launch.xml
ucf_igvc/src/igvc_apps/igvc_navigation/param/: base_local_planner_params.yaml  costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml  navfn_global_planner_params.yaml
ucf_sub/: Readme.md
ucf_turtlebot/src/turtlebot_msgs/: CMakeLists.txt
(+145 files in other folders)
